# sumo-public-content

./: .gitignore  .gitmodules  README.md
Automation Service/: email alert to dynamic recipients.md
Automation Service/examples/: alert.payload.json
CustomTraining/: lab-siem-normalized-data-search.md
CustomTraining/TrainingOrg/: 1._Dashboard_Cookbook_-_Basics_-_Categorical__and_Honeycomb.json  DashboardLab.md  Lab Search JSON logs cloudtrail.md  Lab log monitors.md  Lab metric search and create monitor.md  Lab scheduled views.md  (+2 more)
CustomTraining/online trainings/: debug_raw.html  fetch_training_schedule.py  pyproject.toml  readme.md  training_schedule.html  training_schedule.pptx
apis/scripts/account_management/: .gitignore  README.md  export_usage_report.py  generate_usage_report.py  get_account_status.py  get_child_usages.py  get_usage_forecast.py  pyproject.toml  test_export_usage_report.py  test_get_account_status.py  test_get_usage_forecast.py  test_monthly_report.html
apis/scripts/account_management/organizations_api/: .gitignore  README.md  dev-api.yaml  organizations_cli.py
apis/scripts/oauth/: .env.example  CHANGELOG.md  README.md  fetch_mock_data.py  install.sh  mcp-setup.md  oauth-client-example.json  pyproject.toml  sumo_oauth.py  test_integration.py  test_sumo_oauth.py
apis/scripts/oauth/mock_data/: access_keys.json  oauth_client.json  oauth_scopes.json  oauth_token.json  roles_v2.json  service_accounts.json  users.json
apis/scripts/search_job/: example_query.yaml  example_search_config.yaml  execute_search_job.md  execute_search_job.py  infrequent_search_config.yaml  main.py  pyproject.toml  requirements.txt  simple_test_config.yaml  test_execute_search_job.py  test_search_config.yaml
apis/scripts/search_job/config_examples/: cloudtrail_export.yaml  infrequent_search_config.yaml  test_search_config.yaml
apis/scripts/search_job/skills/: CLAUDE.md  sumo-batch-export.md  sumo-bulk-messages.md  sumo-search-job.md  sumo-search-workflow.md
ask_rick/: readme.md
data-tiers/: Data Ingest Console - Flex CSIEM  Search_audit_metadata_behaviours.json  credits_by_tier.json  credits_estimator_using_datavolume_cse.json  infrequent-scans.json  recent_logs_by_category.json
emojis/: emoji.sumo
lookups/: readme.md
open telemetry otel/: readme.md
parsers/: nginx-ingress.sumo  nginx.ingress.error.sumo
(+2653 files in other folders)
