[project]
name = "sumo-training-schedule"
version = "0.1.0"
description = "Fetch Sumo Logic virtual training schedule and generate HTML + PPTX outputs"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "python-pptx>=1.0",
]

[tool.uv]
# Script-only project — no Python package to install
package = false
