[project]
name = "account-management"
version = "0.1.0"
description = "Sumo Logic Account Management API Scripts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
    { name = "Sumo Logic" }
]

[project.scripts]
sumo-account-status = "get_account_status:main"
sumo-usage-forecast = "get_usage_forecast:main"
sumo-child-usages = "get_child_usages:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["get_account_status.py", "get_usage_forecast.py", "get_child_usages.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
