[project]
name = "sumo-oauth"
version = "0.2.7"
description = "Sumo Logic OAuth CLI utility"
requires-python = ">=3.9"
dependencies = [
    "keyring>=24.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dotenv = [
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
sumo-oauth = "sumo_oauth:main"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: live network tests — require configured profiles and real API access",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
